--- a/build.gradle
+++ b/build.gradle
@@ -307,6 +307,8 @@ dependencies {
     liquibaseRuntime "com.h2database:h2"
     developmentOnly "org.springframework.boot:spring-boot-devtools:${springBootVersion}"
     //jhipster-needle-gradle-dependency - JHipster will add additional dependencies here
+    testImplementation 'io.rest-assured:rest-assured:5.1.1'
+
 }
 
 if (project.hasProperty("gae")) {
